// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceIcon component should show SYSTEM_SOURCE_TYPES icons 1`] = `
<i
  className="icon d-inline-block text-warning material-icons"
>
  note
</i>
`;

exports[`SourceIcon component should show SYSTEM_SOURCE_TYPES icons 2`] = `
<i
  className="icon d-inline-block material-icons"
>
  settings
</i>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 1`] = `
<i
  className="icon d-inline-block text-purple material-icons"
>
  forum
</i>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 2`] = `
<i
  className="icon d-inline-block material-icons"
>
  email
</i>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 3`] = `
<i
  className="icon d-inline-block icon-custom icon-facebook-feed"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 4`] = `
<i
  className="icon d-inline-block icon-custom icon-facebook-feed"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 5`] = `
<i
  className="icon d-inline-block icon-custom icon-facebook-messenger"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 6`] = `
<i
  className="icon d-inline-block icon-custom icon-facebook-messenger"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 7`] = `
<i
  className="icon d-inline-block icon-custom icon-instagram"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 8`] = `
<i
  className="icon d-inline-block icon-custom icon-instagram"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 9`] = `
<i
  className="icon d-inline-block icon-custom icon-instagram"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 10`] = `
<i
  className="icon d-inline-block icon-custom icon-instagram"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 11`] = `
<i
  className="icon d-inline-block icon-custom icon-instagram-dm"
/>
`;

exports[`SourceIcon component should show USABLE_SOURCE_TYPES icons 12`] = `
<i
  className="icon d-inline-block text-warning material-icons"
>
  note
</i>
`;

exports[`SourceIcon component should show default icon 1`] = `
<i
  className="icon d-inline-block material-icons"
>
  live_help
</i>
`;
